<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="hello_main_fragment">Main fragment</string>
    <string name="hello_detail_fragment">Detail fragment</string>
    <string name="price">Price</string>
    <string name="picture">PICTURE</string>
    <string name="no_house">No house to sell</string>
    <string name="no_house_clicked">No house selected</string>
    <string name="nomber_of_rooms">Nb of rooms</string>
    <string name="surface_value">TextView</string>
    <string name="rooms">N° rooms :</string>
    <string name="number">Number</string>
    <string name="bathroom">bathroom</string>
    <string name="point_of_interest">point of interest</string>
    <string name="adress">Adress</string>
    <string name="bedrooms">N° bedrooms :</string>
    <string name="nombre_de_salle_de_bain">N° bathrooms :</string>
    <string name="poi">Point of interest :</string>
    <string name="poi_details">Business, school, subway</string>
    <string name="adresse">Adress :</string>
    <string name="adresse_detail">Adress</string>
    <string name="description">Description :</string>
    <string name="description_details">Description details</string>
    <string name="textview">TextView</string>
    <string name="illustration">picture</string>
    <string name="conversion_euro_dollars">Conversion Euros/Dollars</string>
    <string name="conversion_dollars_euro">Conversion Dollars/Euros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logo">logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">search hint</string>
    <string name="loan_calculator">Loan simulator</string>
    <string name="tablet_rooms">Number of rooms :</string>
    <string name="tablet_bedrooms">Number of bedrooms :</string>
    <string name="tablet_nombre_de_salle_de_bain">Number of bathrooms :</string>
    <string name="tablet_poi">Point of interest :</string>
    <string name="category">Category :</string>
    <string name="category_of_property_to_sell">Category of property to sell</string>
    <string name="District">District :</string>
    <string name="district">District</string>
    <string name="Price">Price :</string>
    <string name="area">Area :</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="gallery">gallery</string>
    <string name="add">ADD</string>
    <string name="transport">Transport</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="first_name">First Name</string>
    <string name="Rooms">Rooms</string>
    <string name="Bedrooms">Bedrooms</string>
    <string name="Bathroom">Bathrooms</string>
    <string name="add_button">ADD PROPERTY</string>
    <string name="numbers_of">Numbers of</string>
    <string name="school">School</string>
    <string name="business">Business</string>
    <string name="real_estate_agent">Real Estate Agent :</string>
    <string name="sell_date">Sell Date</string>
    <string name="budget">Budget</string>
    <string name="price_min">Min price</string>
    <string name="price_max">Max price</string>
    <string name="filter">Filter</string>
    <string name="area_min">Area min</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_rooms_min">Number of rooms min</string>
    <string name="number_of_rooms_max">Number of rooms max</string>
    <string name="area_max">Max area</string>
    <string name="on_sale_date">On-sale date :</string>
    <string name="date">Date</string>
    <string name="agent">Agent :</string>
    <string name="display_all_properties">Display all properties</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="select_a_picture">Select a picture</string>
    <string name="add_a_description">Add a description</string>
    <string name="modify">Modify</string>
    <string name="amount_of_the_loan">Amount of the loan</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="duration">Duration</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="credit_cost">Credit cost</string>
    <string name="monthly_repayment">monthly repayment</string>

</resources>
