<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <TextView
        android:id="@+id/tv_price_search_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="50"
        android:text="@string/budget"
        android:textSize="10sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_search_activity_district" />

  <EditText
      android:id="@+id/et_search_activity_price_mini"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_weight="50"
      android:hint="@string/price_min"
      android:inputType="number"
      android:textSize="10sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_price_search_activity" />

  <EditText
      android:id="@+id/et_search_activity_price_max"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_weight="50"
      android:hint="@string/price_max"
      android:inputType="number"
      android:textSize="10sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/et_search_activity_price_mini"
      app:layout_constraintTop_toBottomOf="@+id/tv_price_search_activity" />

  <Button
      android:id="@+id/bt_search_activity_filter_"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/filter"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_add_activity_linearLayout_poi" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:textSize="10dp"
      android:text="@string/district"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/et_search_activity_district"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/district"
      android:inputType="textPersonName"
      android:textSize="10sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:textSize="10dp"
      android:text="@string/area"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_search_activity_price_mini" />

  <EditText
      android:id="@+id/et_search_activity_mini_area"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:textSize="10sp"
      android:hint="@string/area_min"
      android:inputType="number"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/number_of_rooms"
      android:textSize="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_search_activity_mini_area" />

  <EditText
      android:id="@+id/et_search_activity_mini_room"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/number_of_rooms_min"
      android:inputType="number"
      android:textSize="10sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <EditText
      android:id="@+id/et_search_activity_maxi_room"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/number_of_rooms_max"
      android:inputType="number"
      android:textSize="10sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/et_search_activity_mini_room"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <EditText
      android:id="@+id/et_search_activity_maxi_area"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:hint="@string/area_max"
      android:inputType="number"
      android:textSize="10sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/et_search_activity_mini_area"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <LinearLayout
      android:id="@+id/et_add_activity_linearLayout_poi"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="2dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="2dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_search_activity_mini_room">

    <CheckBox
        android:id="@+id/cb_search_activity_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/street"
        android:textSize="10sp" />

    <CheckBox
        android:id="@+id/cb_search_activity_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/business"
        android:textSize="10sp" />

    <CheckBox
        android:id="@+id/cb_search_activity_public_transport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/transport"
        android:textSize="10sp" />

    <CheckBox
        android:id="@+id/cb_search_activity_swimming_pool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/swimming_pool"
        android:textSize="10sp" />

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>