<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activity_main_toolbar_add"
        android:icon="@drawable/ic_baseline_add_44"
        android:title="@string/add"
        app:showAsAction="ifRoom"></item>
    <item
    android:id="@+id/menu_activity_main_toolbar_map"
    android:icon="@drawable/ic_baseline_map_24"
    android:title="Map"
    app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/menu_activity_main_toolbar_modify"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/modify"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/menu_activity_main_toolbar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/filter"
        app:showAsAction="never"></item>


</menu>