<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".activities.AddActivity">


    <TextView
        android:id="@+id/tv_add_activity_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="50"
        android:text="@string/category"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_add_activity_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="50"
        android:hint="@string/category_of_property_to_sell"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_category" />

    <TextView
        android:id="@+id/tv_add_activity_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="50"
        android:text="@string/district"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/tv_add_activity_category"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_add_activity_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:ems="10"
        android:hint="@string/district"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toEndOf="@+id/et_add_activity_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_district" />

    <TextView
        android:id="@+id/tv_add_activity_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="50"
        android:text="@string/Price"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_category" />

    <EditText
        android:id="@+id/et_add_activity_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="50"
        android:ems="10"
        android:hint="@string/Price"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_price" />

    <TextView
        android:id="@+id/tv_add_activity_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="50"
        android:text="@string/area"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/tv_add_activity_price"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_district" />

    <EditText
        android:id="@+id/et_add_activity_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/area"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toEndOf="@+id/et_add_activity_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_area" />

    <TextView
        android:id="@+id/tv_add_activity_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/numbers_of"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_linearlayout_address" />

    <EditText
        android:id="@+id/et_add_activity_room"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/Rooms"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_room" />

    <EditText
        android:id="@+id/et_add_activity_bedroom"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/Bedrooms"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/et_add_activity_room"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_room" />

    <EditText
        android:id="@+id/et_add_activity_bathroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/Bathroom"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/et_add_activity_bedroom"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_room" />

    <LinearLayout
        android:id="@+id/et_add_activity_linearLayout_poi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Point d'intérêt"
        android:inputType="textPersonName"
        android:orientation="horizontal"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_bedroom">

        <CheckBox
            android:id="@+id/cb_add_activity_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/school"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/cb_add_activity_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/business"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/cb_add_activity_public_transport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transport"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/cb_add_activity_swimming_pool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/swimming_pool"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_add_activity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Description  :"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_agent_name" />

    <EditText
        android:id="@+id/et_add_activity_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_description" />

    <TextView
        android:id="@+id/tv_add_activity_agent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/real_estate_agent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_linearLayout_picture_button" />

    <EditText
        android:id="@+id/et_add_activity_agent_name"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_add_activity_agent_name"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_linearLayout_picture_button" />

    <Button
        android:id="@+id/bt_add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/add_button"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_description" />

    <TextView
        android:id="@+id/tv_add_activity_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/adress"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_price" />

    <LinearLayout
        android:id="@+id/et_add_activity_linearlayout_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_activity_address">

        <EditText
            android:id="@+id/et_add_activity_street_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:hint="N°"
            android:inputType="number"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/et_add_activity_street_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="textPersonName"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/et_add_activity_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/postal_code"
            android:inputType="number"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/et_add_activity_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textSize="10sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/et_add_activity_linearLayout_picture_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_linearLayout_poi">

        <Button
            android:id="@+id/bt_add_activity_select_description_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_photo_24"
            android:text="photo"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textAlignment="center"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bt_add_activity_add_description_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bt_add_activity_select_gallerie_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_photo_library_24"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/gallery"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bt_add_activity_add_gallerie_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_add_activity_date_of_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/sell_date"
        android:inputType="date"
        android:textSize="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_add_activity_agent_name"
        app:layout_constraintTop_toBottomOf="@+id/et_add_activity_linearLayout_picture_button" />

</androidx.constraintlayout.widget.ConstraintLayout>